stg last one of the night

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     </header>
 
     <main>
-        <section id="hero">
-            <div class="container">
+        <section id="hero" class="about">
+            <!-- Add "about" ID to make the navigation link work -->
+            <div id="about" class="container">
                 <div class="profile-section">
                     <div class="profile-image">
                         <img src="images/portrait.jpg" alt="Leif Pedersen">
@@ -31,10 +32,9 @@
                     <div class="profile-info">
                         <h1>Leif Pedersen</h1>
                         <p class="tagline">Physics and Engineering Student at DTU</p>
-                        </div>
                     </div>
                 </div>
-                <p class="bio">Motivated student looking for more work experience within research and development alongside my studies. I am fluent in English and Danish, and also have learnt Japanese and Spanish in school. I have experience in Python, C++, image processing, and find enjoyment in learning new things.</p>
+                <p class="bio">Motivated student looking for more work experience within research and development alongside my studies. I am fluent in English and Danish, and also have learnt Japanese and Spanish in school. I have experience in Python, C++, JS, image processing, and find enjoyment in learning new things.</p>
             </div>
         </section>
 
@@ -82,9 +82,9 @@
                 <h2>Work Experience</h2>
                 <div class="timeline">
                     <div class="timeline-item">
-                        <img src="images/dtu-logo.png" alt="DTU" class="logo">
+                        <img src="images/compute.jpg" alt="DTU Compute" class="logo">
                         <div class="timeline-item-content">
-                            <h3>Class Teacher -- DTU</h3>
+                            <h3>Class Teacher -- DTU Compute</h3>
                             <p class="date">2024 -- Ongoing</p>
                             <p class="location">Kongens Lyngby, Denmark</p>
                             <ul>
@@ -93,9 +93,9 @@
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <img src="images/dtu-logo.png" alt="DTU" class="logo">
+                        <img src="images/fysik.jpg" alt="DTU Fysik" class="logo">
                         <div class="timeline-item-content">
-                            <h3>Teacher Assistant -- DTU</h3>
+                            <h3>Teacher Assistant -- DTU Fysik & DTU Compute</h3>
                             <p class="date">2024 -- Ongoing</p>
                             <p class="location">Kongens Lyngby, Denmark</p>
                             <ul>
@@ -139,7 +139,7 @@
                         <img src="images/Opticsim.jpg" alt="Optical Simulator" onerror="this.src='https://via.placeholder.com/400x200?text=Optical+Simulator'">
                         <h3>Optical Simulator</h3>
                         <p class="date">2024</p>
-                        <p>Interactive web-based simulator for optical structures, featuring both taper and flat-top configurations. Built with Python and JavaScript.</p>
+                        <p>Python simulator to study and optimize efficiency of different optical structures for single photon sources which are vital for quantum information. Simulation featured both taper, flat-top, and Anti-reflective while also account for a butt-coupling optical fiber and it's coupling-efficiency.</p>
                         <!-- Removed the external simulator link -->
                     </div>
                     <div class="project-card">
@@ -160,7 +160,7 @@
                         <div class="timeline-item-content">
                             <h3>Chemistry Olympiad</h3>
                             <p class="date">October 2022 - May 2023</p>
-                            <p>Participated and made it to the final round of the danish Kemi OL</p>
+                            <p>Participated and made it to the final round of the danish chemistry olympiad</p>
                         </div>
                         <img src="images/KemiOL.jpg" alt="Chemistry Olympiad" class="KemiOL">
                     </div>
@@ -173,10 +173,11 @@
                         </div>
                     </div>
                     <div class="timeline-item">
+                        <img src="images/warriors.jpg" alt="Track and Field" class="logo">
                         <div class="timeline-item-content">
                             <h3>Track and Field</h3>
                             <p class="date">Spring 2021</p>
-                            <p>Received "Rookie of the Year" and joined varsity in my first year of track and field for my High School</p>
+                            <p>Joined varsity recieving "Rookie of the Year" in my first year of track and field for my high school</p>
                         </div>
                     </div>
                     <div class="timeline-item">
