--- a/courses.html
+++ b/courses.html
@@ -58,6 +58,11 @@
             font-weight: 500;
         }
         
+        .masters-level {
+            color: #d32f2f !important;
+            font-weight: 500;
+        }
+        
         .course-bullets {
             margin-top: 6px;
             padding-left: 18px;
@@ -281,7 +286,7 @@
                             <span class="course-number"><a href="https://kurser.dtu.dk/course/02195" target="_blank">02195</a></span>
                             <a href="https://kurser.dtu.dk/course/02195" target="_blank">Quantum Algorithms and Machine Learning</a>
                         </h2>
-                        <p class="course-semester">Advanced Quantum Computing Course</p>
+                        <p class="course-semester masters-level">Master's Level Quantum Computing Course</p>
                         <ul class="course-bullets">
                             <li>Implementation of Grover's search algorithm and quantum phase estimation</li>
                             <li>Study of HHL algorithm for linear systems and machine learning applications</li>
@@ -295,7 +300,7 @@
                             <span class="course-number"><a href="https://kurser.dtu.dk/course/02196" target="_blank">02196</a></span>
                             <a href="https://kurser.dtu.dk/course/02196" target="_blank">Quantum Compilers</a>
                         </h2>
-                        <p class="course-semester">Specialized Quantum Computing Course</p>
+                        <p class="course-semester masters-level">Master's Level Quantum Computing/Computer Science Course</p>
                         <ul class="course-bullets">
                             <li>Quantum circuit optimization for various hardware architectures</li>
                             <li>Noise mitigation strategies for quantum algorithm performance</li>
@@ -328,7 +333,7 @@
                             <span class="course-number"><a href="https://kurser.dtu.dk/course/10112" target="_blank">10112</a></span>
                             <a href="https://kurser.dtu.dk/course/10112" target="_blank">Advanced Quantum Mechanics</a>
                         </h2>
-                        <p class="course-semester">Advanced Physics Course</p>
+                        <p class="course-semester masters-level">Master's Level Physics Course</p>
                         <ul class="course-bullets">
                             <li>Analyzed quantum states and operators in depth</li>
                             <li>Applied measurement theory to quantum systems</li>
@@ -341,7 +346,7 @@
                             <span class="course-number"><a href="https://kurser.dtu.dk/course/10384" target="_blank">10384</a></span>
                             <a href="https://kurser.dtu.dk/course/10384" target="_blank">Quantum Information</a>
                         </h2>
-                        <p class="course-semester">Specialization Course</p>
+                        <p class="course-semester masters-level">Master's Level Specialization Course</p>
                         <ul class="course-bullets">
                             <li>Studied quantum bits and quantum logic gates</li>
                             <li>Analyzed quantum algorithms and their computational advantages</li>
