final stuff for courses

--- a/courses.html
+++ b/courses.html
@@ -288,11 +288,10 @@
                         </h2>
                         <p class="course-semester masters-level">Master's Level Quantum Computing Course</p>
                         <ul class="course-bullets">
-                            <li>Implementation of Grover's search algorithm and quantum phase estimation</li>
-                            <li>Study of HHL algorithm for linear systems and machine learning applications</li>
-                            <li>Development of quantum neural networks and support vector machines</li>
-                            <li>Application of quantum dimensionality reduction techniques</li>
-                        </ul>
+                            <li>Exploring how superposition and entanglement enable quantum algorithms</li>
+                            <li>Implementing quantum variational methods and approximate optimization</li>
+                            <li>Developing quantum machine learning algorithms using Qiskit</li>
+                            <li>Analyzing performance and complexity classes of quantum algorithms</li>
                     </div>
                     
                     <div class="current-course-card">
@@ -302,10 +301,10 @@
                         </h2>
                         <p class="course-semester masters-level">Master's Level Quantum Computing/Computer Science Course</p>
                         <ul class="course-bullets">
-                            <li>Quantum circuit optimization for various hardware architectures</li>
-                            <li>Noise mitigation strategies for quantum algorithm performance</li>
-                            <li>Mapping abstract quantum algorithms to physical qubits</li>
-                            <li>Development for NISQ (Noisy Intermediate-Scale Quantum) devices</li>
+                            <li>Understanding compilation process and creating our own compiler for our own quantum circuit language</li>
+                            <li>Implementing optimization techniques: circuit compression, decomposition, and error mitigation</li>
+                            <li>Developing code generation strategies for NISQ-era quantum computers</li>
+                            <li>Evaluating quantum computer performance and integration with classical computing</li>
                         </ul>
                     </div>
                     
@@ -314,7 +313,7 @@
                             <span class="course-number"><a href="https://kurser.dtu.dk/course/34020" target="_blank">34020</a></span>
                             <a href="https://kurser.dtu.dk/course/34020" target="_blank">Optics and Photonics</a>
                         </h2>
-                        <p class="course-semester">Advanced Physics Course</p>
+                        <p class="course-semester">Physics Core Course</p>
                         <ul class="course-bullets">
                             <li>Study of electromagnetic waves and optical phenomena</li>
                             <li>Application of polarization, interference, and diffraction principles</li>
@@ -335,9 +334,9 @@
                         </h2>
                         <p class="course-semester masters-level">Master's Level Physics Course</p>
                         <ul class="course-bullets">
-                            <li>Analyzed quantum states and operators in depth</li>
-                            <li>Applied measurement theory to quantum systems</li>
-                            <li>Developed approximation methods for complex quantum problems</li>
+                            <li>Analyzed quantum states, operators, and measurement theory in depth</li>
+                            <li>Analysed symmetry and applications in chemistry with group theory</li>
+                            <li>Worked with approximation methods for complex quantum problems(like DFT)</li>
                         </ul>
                     </div>
 
@@ -361,9 +360,9 @@
                         </h2>
                         <p class="course-semester">Physics Core Course</p>
                         <ul class="course-bullets">
-                            <li>Mastered electric and magnetic field theory</li>
-                            <li>Applied Maxwell's equations to electromagnetic phenomena</li>
+                            <li>Learnt and applied Maxwell's equations</li>
                             <li>Analyzed electromagnetic waves and their properties</li>
+                            <li>Worked with vector calculus and difficult partial differential equations</li>
                         </ul>
                     </div>
 
@@ -408,14 +407,13 @@
 
                     <div class="course-card">
                         <h2 class="course-title">
-                            <span class="course-number"><a href="https://kurser.dtu.dk/course/42620" target="_blank">42620</a></span>
-                            <a href="https://kurser.dtu.dk/course/42620" target="_blank">Science, Technology and Society</a>
+                            <span class="course-number"><a href="https://kurser.dtu.dk/course/02002" target="_blank">02002</a></span>
+                            <a href="https://kurser.dtu.dk/course/02002" target="_blank">Computer Programming</a>
                         </h2>
-                        <p class="course-semester">Polytechnical Foundation Course</p>
+                        <p class="course-semester">Introductory Programming Course</p>
                         <ul class="course-bullets">
-                            <li>Analyzed innovation's impact on society and the environment</li>
-                            <li>Applied sustainability frameworks to engineering projects</li>
-                            <li>Explored responsible research and innovation principles</li>
+                            <li>Developed fundamental programming skills using Python</li>
+                            <li>Implemented algorithms and data structures for problem-solving</li>
                         </ul>
                     </div>
 
@@ -427,7 +425,7 @@
                         <p class="course-semester">Introductory Course</p>
                         <ul class="course-bullets">
                             <li>Gained foundation in core physical principles</li>
-                            <li>Developed problem-solving methodologies</li>
+                            <li>Learnt how to work in groups with lab work, data analysis and report writing</li>
                             <li>Applied physics concepts to engineering challenges</li>
                         </ul>
                     </div>
