--- a/courses.html
+++ b/courses.html
@@ -263,7 +263,7 @@
             <li><a href="index.html#about">About</a></li>
             <li><a href="index.html#education">Education</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="abroad.html">Study Abroad</a></li>
+            <li><a href="abroad.html">Study Abroad to Korea</a></li>
             <li><a href="index.html#experience">Experience</a></li>
             <li><a href="index.html#projects">Projects</a></li>
             <li><a href="index.html#extracurriculars">Extracurriculars</a></li>
