--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="courses.html">Courses</a></li>
-            <li><a href="abroad.html">Study Abroad</a></li>
+            <li><a href="abroad.html">Study Abroad to Korea</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#extracurriculars">Extracurriculars</a></li>
