--- a/abroad.html
+++ b/abroad.html
@@ -683,6 +683,7 @@
                 { name: './asger-leif pics/received_792226416269674.jpg', type: 'image', alt: 'Friendship memory 2' },
                 { name: './asger-leif pics/received_954917649407622.jpg', type: 'image', alt: 'Friendship memory 3' },
                 { name: './asger-leif pics/received_356365800766996.jpg', type: 'image', alt: 'Friendship memory 4' },
+                { name: './asger-leif pics/dtuclimbing.mp4', type: 'video', alt: 'Video memory 1' },
                 { name: './asger-leif pics/received_1143563380310138.jpg', type: 'image', alt: 'Friendship memory 5' },
                 { name: './asger-leif pics/received_3312524335715168.jpg', type: 'image', alt: 'Friendship memory 6' },
                 { name: './asger-leif pics/Snapchat-1107179079.jpg', type: 'image', alt: 'Friendship memory 7' },
@@ -698,6 +699,7 @@
                 { name: './asger-leif pics/434637230_306340145632242_8051407992096838136_n.jpg', type: 'image', alt: 'Friendship memory 19' },
                 { name: './asger-leif pics/435136218_344706298612031_6315309374005591432_n.jpg', type: 'image', alt: 'Friendship memory 21' },
                 { name: './asger-leif pics/441235670_1162570694878811_7736326480475417172_n.jpg', type: 'image', alt: 'Friendship memory 22' },
+   
                 { name: './asger-leif pics/462559903_2710683169133991_1854264752130749196_n.jpg', type: 'image', alt: 'Friendship memory 23' }
             ];
             
